--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
+# Include your project-specific ignores in this file
+# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+
+
+# SublimeText
 *.sublime-*
