--- a/package.json
+++ b/package.json
@@ -16,5 +16,23 @@
   "bugs": {
     "url": "https://github.com/sylvaindethier/sylvaindethier.github.io/issues"
   },
-  "homepage": "https://github.com/sylvaindethier/sylvaindethier.github.io#readme"
+  "homepage": "https://github.com/sylvaindethier/sylvaindethier.github.io#readme",
+  "dependencies": {
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-syntax-jsx": "^6.13.0",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "eslint": "^3.3.1",
+    "eslint-config-standard": "^6.0.0-beta.3",
+    "eslint-config-standard-jsx": "^3.0.0",
+    "eslint-config-standard-react": "^3.0.0",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-react": "^6.1.2",
+    "eslint-plugin-standard": "^2.0.0"
+  }
 }
