--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "sylvaindethier.github.io",
-  "version": "1.0.0",
   "private": true,
   "description": "Sylvain Dethier personal website",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./scripts/start.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node ./scripts/build.js"
   },
   "repository": {
     "type": "git",
@@ -22,17 +22,41 @@
     "react-dom": "^15.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
+    "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
-    "babel-plugin-syntax-jsx": "^6.13.0",
-    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2016": "^6.11.3",
     "babel-preset-react": "^6.11.1",
+    "babel-runtime": "^6.11.6",
+    "chalk": "^1.1.3",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.1",
     "eslint": "^3.3.1",
-    "eslint-config-standard": "^6.0.0-beta.3",
-    "eslint-config-standard-jsx": "^3.0.0",
-    "eslint-config-standard-react": "^3.0.0",
-    "eslint-plugin-promise": "^2.0.1",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.1.2",
-    "eslint-plugin-standard": "^2.0.0"
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
+    "json-loader": "^0.5.4",
+    "postcss-loader": "^0.10.1",
+    "promise": "^7.1.1",
+    "rimraf": "^2.5.4",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.14.1",
+    "whatwg-fetch": "^1.0.0"
+  },
+  "eslintConfig": {
+    "extends": "./config/eslint.js"
   }
 }
