--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/sylvaindethier/sylvaindethier.github.io#readme",
   "dependencies": {
+    "intl": "^1.2.4",
     "material-ui": "^0.15.4",
     "normalize.css": "^4.2.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-intl": "^2.1.4",
     "react-router": "^2.7.0",
     "react-tap-event-plugin": "^1.0.0"
   },
