--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-preset-es2016": "^6.11.3",
     "babel-preset-react": "^6.11.1",
     "babel-runtime": "^6.11.6",
+    "chalk": "^1.1.3",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.24.0",
     "eslint": "^3.3.1",
