--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "npm run build:client && npm run build:intl",
     "build:client": "node ./scripts/build-client.js",
     "build:intl": "node ./scripts/build-intl.js",
+    "preprod": "npm run build",
+    "prod": "http-server ./build",
     "deploy": "node ./scripts/deploy.js"
   },
   "repository": {
@@ -57,6 +59,7 @@
     "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.22.0",
+    "http-server": "^0.9.0",
     "json-loader": "^0.5.4",
     "postcss-loader": "^0.10.1",
     "promise": "^7.1.1",
