--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/sylvaindethier/sylvaindethier.github.io#readme",
   "dependencies": {
     "intl": "^1.2.4",
+    "intl-locales-supported": "^1.0.0",
     "material-ui": "^0.15.4",
     "normalize.css": "^4.2.0",
     "react": "^15.3.1",
@@ -39,22 +40,30 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-react-intl": "^2.1.4",
-    "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2016": "^6.11.3",
+    "babel-preset-es2017": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-runtime": "^6.11.6",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.24.0",
+    "debug": "^2.2.0",
     "eslint": "^3.3.1",
+    "eslint-config-standard": "^6.0.0",
+    "eslint-config-standard-jsx": "^3.0.0",
+    "eslint-config-standard-react": "^4.0.0",
     "eslint-loader": "^1.5.0",
+    "eslint-plugin-flowtype": "^2.16.0",
+    "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.1.2",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-standard": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
@@ -69,8 +78,5 @@
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0",
     "whatwg-fetch": "^1.0.0"
-  },
-  "eslintConfig": {
-    "extends": "./config/eslint.js"
   }
 }
