--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "node ./scripts/start.js",
     "test": "echo \"Error: no test specified\"",
     "prebuild": "echo \"Should run the tests before build\"",
-    "build": "npm run build:client && npm run build:intl",
-    "build:client": "node ./scripts/build-client.js",
-    "build:intl": "node ./scripts/build-intl.js",
+    "build": "node ./scripts/build.js",
     "preprod": "npm run build",
     "prod": "http-server ./build",
     "deploy": "node ./scripts/deploy.js"
@@ -28,11 +26,13 @@
     "intl-locales-supported": "^1.0.0",
     "material-ui": "^0.15.4",
     "normalize.css": "^4.2.0",
+    "promise": "^7.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-intl": "^2.1.4",
     "react-router": "^2.7.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^1.0.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -51,32 +51,32 @@
     "babel-runtime": "^6.11.6",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.24.0",
+    "css-loader": "^0.25.0",
     "debug": "^2.2.0",
-    "eslint": "^3.3.1",
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^11.0.0",
     "eslint-config-standard": "^6.0.0",
     "eslint-config-standard-jsx": "^3.0.0",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-flowtype": "^2.16.0",
     "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-jsx-a11y": "^2.2.1",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-react": "^6.2.0",
     "eslint-plugin-standard": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
+    "glob": "^7.0.6",
     "html-webpack-plugin": "^2.22.0",
     "http-server": "^0.9.0",
     "json-loader": "^0.5.4",
-    "postcss-loader": "^0.10.1",
-    "promise": "^7.1.1",
+    "postcss-loader": "^0.13.0",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.0",
-    "whatwg-fetch": "^1.0.0"
+    "webpack-dev-server": "^1.15.0"
   }
 }
