--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-intl": "^2.1.4",
+    "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.6.0",
+    "redux-actions": "^0.12.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
@@ -73,6 +76,7 @@
     "http-server": "^0.9.0",
     "json-loader": "^0.5.4",
     "postcss-loader": "^0.13.0",
+    "redux-logger": "^2.6.1",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
