--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-intl": "^2.1.4",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
+    "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-actions": "^0.12.0",
