--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-actions": "^0.12.0",
+    "redux-thunk": "^2.1.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
