--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
   "name": "sylvaindethier.github.io",
   "private": true,
+  "version": "0.1.0",
   "description": "Sylvain Dethier personal website",
-  "scripts": {
-    "start": "node ./scripts/start.js",
-    "test": "echo \"Error: no test specified\"",
-    "prebuild": "echo \"Should run the tests before build\"",
-    "build": "node ./scripts/build.js",
-    "preprod": "npm run build",
-    "prod": "http-server ./build",
-    "deploy": "node ./scripts/deploy.js"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sylvaindethier/sylvaindethier.github.io.git"
@@ -20,68 +12,90 @@
   "bugs": {
     "url": "https://github.com/sylvaindethier/sylvaindethier.github.io/issues"
   },
-  "homepage": "https://github.com/sylvaindethier/sylvaindethier.github.io#readme",
+  "homepage": "https://sylvaindethier.github.io",
+  "scripts": {
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom"
+  },
   "dependencies": {
-    "intl": "^1.2.4",
-    "intl-locales-supported": "^1.0.0",
-    "material-ui": "^0.15.4",
-    "normalize.css": "^4.2.0",
-    "promise": "^7.1.1",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-intl": "^2.1.4",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.7.0",
-    "react-router-redux": "^4.0.5",
-    "react-tap-event-plugin": "^1.0.0",
-    "redux": "^3.6.0",
-    "redux-actions": "^0.12.0",
-    "redux-thunk": "^2.1.0",
-    "whatwg-fetch": "^1.0.0"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-react-intl": "^2.1.4",
-    "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-plugin-transform-react-constant-elements": "^6.9.1",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-es2016": "^6.11.3",
-    "babel-preset-es2017": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-runtime": "^6.11.6",
-    "chalk": "^1.1.3",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.25.0",
-    "debug": "^2.2.0",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^11.0.0",
-    "eslint-config-standard": "^6.0.0",
-    "eslint-config-standard-jsx": "^3.0.0",
-    "eslint-config-standard-react": "^4.0.0",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-flowtype": "^2.16.0",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.1",
-    "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-react": "^6.2.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "gh-pages": "^0.11.0",
-    "glob": "^7.0.6",
-    "html-webpack-plugin": "^2.22.0",
-    "http-server": "^0.9.0",
-    "json-loader": "^0.5.4",
-    "postcss-loader": "^0.13.0",
-    "rimraf": "^2.5.4",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.0"
+    "autoprefixer": "6.5.1",
+    "babel-core": "6.17.0",
+    "babel-eslint": "7.1.1",
+    "babel-jest": "17.0.2",
+    "babel-loader": "6.2.7",
+    "babel-preset-react-app": "^2.0.1",
+    "case-sensitive-paths-webpack-plugin": "1.1.4",
+    "chalk": "1.1.3",
+    "connect-history-api-fallback": "1.3.0",
+    "cross-spawn": "4.0.2",
+    "css-loader": "0.26.0",
+    "detect-port": "1.0.1",
+    "dotenv": "2.0.0",
+    "eslint": "3.8.1",
+    "eslint-config-react-app": "^0.5.0",
+    "eslint-loader": "1.6.0",
+    "eslint-plugin-flowtype": "2.21.0",
+    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.4.1",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "filesize": "3.3.0",
+    "fs-extra": "0.30.0",
+    "gzip-size": "3.0.0",
+    "html-webpack-plugin": "2.24.0",
+    "http-proxy-middleware": "0.17.2",
+    "jest": "17.0.2",
+    "json-loader": "0.5.4",
+    "object-assign": "4.1.0",
+    "path-exists": "2.1.0",
+    "postcss-loader": "1.0.0",
+    "promise": "7.1.1",
+    "react-dev-utils": "^0.4.2",
+    "recursive-readdir": "2.1.0",
+    "strip-ansi": "3.0.1",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.2",
+    "webpack-manifest-plugin": "1.1.0",
+    "whatwg-fetch": "1.0.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>[/\\\\](build|docs|node_modules)[/\\\\]"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    }
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
