--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
+    "object-assign": "4.1.0",
+    "promise": "7.1.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
@@ -56,10 +59,8 @@
     "http-proxy-middleware": "^0.17.3",
     "jest": "^18.1.0",
     "json-loader": "0.5.4",
-    "object-assign": "4.1.0",
     "path-exists": "^3.0.0",
     "postcss-loader": "^1.2.2",
-    "promise": "7.1.1",
     "pushstate-server": "^2.1.0",
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
@@ -68,8 +69,7 @@
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "^2.0.1"
+    "webpack-manifest-plugin": "1.1.0"
   },
   "jest": {
     "collectCoverageFrom": [
