--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "preprod": "npm run build",
+    "lint": "./node_modules/.bin/eslint . --fix",
+    "preprod": "npm run lint && npm run test && npm run build",
     "prod": "./node_modules/.bin/pushstate-server build",
+    "predeploy": "npm run preprod",
     "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
