--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "pushstate-server": "^2.1.0",
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
+    "stats-webpack-plugin": "^0.4.3",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
