--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "node scripts/start.js",
     "test": "node scripts/test.js --env=jsdom",
     "build": "node scripts/build.js",
-    "prod": "./node_modules/.bin/pushstate-server build",
+    "prod": "node scripts/prod.js",
     "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
