--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,8 @@
     ["es2015", { "modules": false }]
   ],
   "plugins": [
-    "syntax-dynamic-import"
+    "syntax-dynamic-import",
+     ["transform-class-properties", { "spec": true }],
+     ["transform-es2015-modules-commonjs", { "spec": true }]
   ]
 }
