--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0-alpha.6",
+    "sanitize.css": "^4.1.0",
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
