--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
-    "object-assign": "4.1.0",
+    "object-assign": "^4.1.1",
     "promise": "7.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -30,7 +30,7 @@
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.6.1",
+    "autoprefixer": "^6.7.0",
     "babel-core": "^6.21.0",
     "babel-eslint": "7.1.1",
     "babel-jest": "^18.0.0",
@@ -59,8 +59,8 @@
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "0.9.0",
-    "filesize": "3.3.0",
-    "fs-extra": "^1.0.0",
+    "filesize": "^3.4.3",
+    "fs-extra": "^2.0.0",
     "gh-pages": "^0.12.0",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "^2.26.0",
