--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
+    "material-ui": "^0.16.7",
     "object-assign": "^4.1.1",
     "promise": "7.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0-alpha.6",
+    "react-tap-event-plugin": "^2.0.1",
     "sanitize.css": "^4.1.0",
     "whatwg-fetch": "^2.0.1"
   },
