--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "promise": "7.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^4.0.0-alpha.6",
+    "react-router-dom": "next",
     "react-tap-event-plugin": "^2.0.1",
     "sanitize.css": "^4.1.0",
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.0",
+    "autoprefixer": "^6.7.2",
     "babel-core": "^6.21.0",
     "babel-eslint": "7.1.1",
     "babel-jest": "^18.0.0",
@@ -41,46 +41,46 @@
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react-app": "^2.0.1",
-    "case-sensitive-paths-webpack-plugin": "1.1.4",
-    "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
+    "case-sensitive-paths-webpack-plugin": "^1.1.4",
+    "chalk": "^1.1.3",
+    "connect-history-api-fallback": "^1.3.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
     "detect-port": "^1.0.7",
     "dotenv": "^4.0.0",
-    "eslint": "^3.13.1",
+    "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-config-standard-jsx": "^3.2.0",
     "eslint-config-standard-react": "^4.2.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-flowtype": "^2.29.2",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "0.9.0",
-    "filesize": "^3.4.3",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "filesize": "^3.5.4",
     "fs-extra": "^2.0.0",
     "gh-pages": "^0.12.0",
-    "gzip-size": "3.0.0",
-    "html-webpack-plugin": "^2.26.0",
+    "gzip-size": "^3.0.0",
+    "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "jest": "^18.1.0",
-    "json-loader": "0.5.4",
+    "json-loader": "^0.5.4",
     "path-exists": "^3.0.0",
     "postcss-loader": "^1.2.2",
-    "pushstate-server": "^2.1.0",
+    "pushstate-server": "^2.2.1",
     "react-dev-utils": "^0.4.2",
-    "recursive-readdir": "2.1.0",
+    "recursive-readdir": "^2.1.0",
     "stats-webpack-plugin": "^0.4.3",
-    "strip-ansi": "3.0.1",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "^2.2.0-rc.4",
-    "webpack-dev-server": "^2.2.0-rc.0",
-    "webpack-manifest-plugin": "1.1.0"
+    "strip-ansi": "^3.0.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0",
+    "webpack-manifest-plugin": "^1.1.0"
   },
   "jest": {
     "collectCoverageFrom": [
