--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react-app": "^2.1.1",
+    "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "^1.1.4",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
@@ -69,7 +70,6 @@
     "http-proxy-middleware": "^0.17.3",
     "jest": "^19.0.2",
     "json-loader": "^0.5.4",
-    "path-exists": "^3.0.0",
     "postcss-loader": "^1.3.3",
     "pushstate-server": "^3.0.0",
     "react-dev-utils": "^0.5.1",
@@ -105,5 +105,16 @@
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     }
+  },
+  "babel": {
+    "presets": [
+      "react-app",
+      ["es2015", { "modules": false }]
+    ],
+    "plugins": [
+      "syntax-dynamic-import",
+       ["transform-class-properties", { "spec": true }],
+       ["transform-es2015-modules-commonjs", { "spec": true }]
+    ]
   }
 }
