--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "promise": "7.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router-dom": "next",
+    "react-router-dom": "^4.0.0-beta.7",
     "react-tap-event-plugin": "^2.0.1",
     "sanitize.css": "^5.0.0",
     "whatwg-fetch": "^2.0.1"
@@ -36,7 +36,7 @@
     "babel-core": "^6.23.1",
     "babel-eslint": "7.1.1",
     "babel-jest": "^19.0.0",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^6.4.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
@@ -46,33 +46,33 @@
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "cross-spawn": "^5.1.0",
-    "css-loader": "^0.26.2",
+    "css-loader": "^0.26.4",
     "detect-port": "^1.0.7",
     "dotenv": "^4.0.0",
-    "eslint": "^3.16.1",
-    "eslint-config-standard": "^7.0.0",
+    "eslint": "^3.17.1",
+    "eslint-config-standard": "^7.0.1",
     "eslint-config-standard-jsx": "^3.3.0",
-    "eslint-config-standard-react": "^4.2.0",
+    "eslint-config-standard-react": "^4.3.0",
     "eslint-loader": "^1.6.3",
-    "eslint-plugin-flowtype": "^2.29.2",
+    "eslint-plugin-flowtype": "^2.30.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.1.1",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
-    "filesize": "^3.5.5",
+    "filesize": "^3.5.6",
     "fs-extra": "^2.0.0",
     "gh-pages": "^0.12.0",
     "gzip-size": "^3.0.0",
     "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
+    "http-proxy-middleware": "^0.17.4",
     "jest": "^19.0.2",
     "json-loader": "^0.5.4",
     "postcss-loader": "^1.3.3",
     "pushstate-server": "^3.0.0",
-    "react-dev-utils": "^0.5.1",
+    "react-dev-utils": "^0.5.2",
     "recursive-readdir": "^2.1.1",
     "stats-webpack-plugin": "^0.5.0",
     "strip-ansi": "^3.0.1",
@@ -109,12 +109,27 @@
   "babel": {
     "presets": [
       "react-app",
-      ["es2015", { "modules": false }]
+      [
+        "es2015",
+        {
+          "modules": false
+        }
+      ]
     ],
     "plugins": [
       "syntax-dynamic-import",
-       ["transform-class-properties", { "spec": true }],
-       ["transform-es2015-modules-commonjs", { "spec": true }]
+      [
+        "transform-class-properties",
+        {
+          "spec": true
+        }
+      ],
+      [
+        "transform-es2015-modules-commonjs",
+        {
+          "spec": true
+        }
+      ]
     ]
   }
 }
