--- a/package.json
+++ b/package.json
@@ -21,32 +21,32 @@
     "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
-    "material-ui": "^0.17.0",
+    "material-ui": "^0.17.1",
     "object-assign": "^4.1.1",
     "promise": "7.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router-dom": "^4.0.0-beta.7",
+    "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "sanitize.css": "^5.0.0",
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.6",
-    "babel-core": "^6.23.1",
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.24.0",
     "babel-eslint": "7.1.1",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react-app": "^2.1.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react-app": "^2.2.0",
     "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "^1.1.4",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "cross-spawn": "^5.1.0",
-    "css-loader": "^0.26.4",
+    "css-loader": "^0.27.3",
     "detect-port": "^1.0.7",
     "dotenv": "^4.0.0",
     "eslint": "^3.17.1",
@@ -79,7 +79,7 @@
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
+    "webpack-dev-server": "^2.4.2",
     "webpack-manifest-plugin": "^1.1.0"
   },
   "jest": {
