--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "promise": "7.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-loadable": "^3.0.0",
     "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "sanitize.css": "^5.0.0",
