--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "detect-port": "^1.0.7",
     "dotenv": "^4.0.0",
     "eslint": "^3.17.1",
-    "eslint-config-prettier": "^1.5.0",
     "eslint-config-standard": "^7.0.1",
     "eslint-config-standard-jsx": "^3.3.0",
     "eslint-config-standard-react": "^4.3.0",
@@ -59,7 +58,6 @@
     "eslint-plugin-flowtype": "^2.30.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-prettier": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.1.1",
@@ -75,6 +73,7 @@
     "json-loader": "^0.5.4",
     "postcss-loader": "^1.3.3",
     "prettier": "^0.22.0",
+    "prettier-eslint": "^4.3.2",
     "pushstate-server": "^3.0.0",
     "react-dev-utils": "^0.5.2",
     "recursive-readdir": "^2.1.1",
