--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "test": "node scripts/test.js --env=jsdom",
+    "format": "prettier-eslint --write \"./**/*.js\"",
+    "prebuild": "npm run format",
     "build": "node scripts/build.js",
     "prod": "node scripts/prod.js",
     "deploy": "node scripts/deploy.js"
@@ -74,6 +76,7 @@
     "postcss-loader": "^1.3.3",
     "prettier": "^0.22.0",
     "prettier-eslint": "^4.3.2",
+    "prettier-eslint-cli": "^3.1.2",
     "pushstate-server": "^3.0.0",
     "react-dev-utils": "^0.5.2",
     "recursive-readdir": "^2.1.1",
