--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   "scripts": {
     "start": "node scripts/start.js",
     "test": "node scripts/test.js --env=jsdom",
-    "format": "prettier-eslint --write \"./**/*.js\"",
-    "prebuild": "npm run format",
     "build": "node scripts/build.js",
     "prod": "node scripts/prod.js",
     "deploy": "node scripts/deploy.js"
@@ -37,7 +35,7 @@
   "devDependencies": {
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
-    "babel-eslint": "7.1.1",
+    "babel-eslint": "^7.2.1",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -76,13 +74,12 @@
     "postcss-loader": "^1.3.3",
     "prettier": "^0.22.0",
     "prettier-eslint": "^4.3.2",
-    "prettier-eslint-cli": "^3.1.2",
     "pushstate-server": "^3.0.0",
     "react-dev-utils": "^0.5.2",
     "recursive-readdir": "^2.1.1",
     "stats-webpack-plugin": "^0.5.0",
     "strip-ansi": "^3.0.1",
-    "style-loader": "^0.14.1",
+    "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2",
