--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://sylvaindethier.github.io",
   "scripts": {
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "start": "node scripts/start.js",
     "test": "node scripts/test.js --env=jsdom",
     "build": "node scripts/build.js",
@@ -51,6 +52,7 @@
     "detect-port": "^1.0.7",
     "dotenv": "^4.0.0",
     "eslint": "^3.17.1",
+    "eslint-config-prettier": "^1.5.0",
     "eslint-config-standard": "^7.0.1",
     "eslint-config-standard-jsx": "^3.3.0",
     "eslint-config-standard-react": "^4.3.0",
@@ -58,12 +60,14 @@
     "eslint-plugin-flowtype": "^2.30.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-prettier": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.1.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "filesize": "^3.5.6",
+    "flow-bin": "^0.42.0",
     "fs-extra": "^2.0.0",
     "gh-pages": "^0.12.0",
     "gzip-size": "^3.0.0",
