--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-  "files.autoSave": "off",
-  "editor.formatOnSave": false,
+  "files.autoSave": "onWindowChange",
   "eslint.run": "onType",
-  "eslint.autoFixOnSave": false
+  "eslint.autoFixOnSave": true
 }
