--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
 {
   "files.autoSave": "onWindowChange",
   "eslint.run": "onType",
-  "eslint.autoFixOnSave": true
+  "eslint.autoFixOnSave": true,
+  "javascript.validate.enable": false
 }
