--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://sylvaindethier.github.io",
   "scripts": {
+    "postinstall": "node ./node_modules/.bin/flow-typed install",
     "start": "node scripts/start.js",
     "test": "node scripts/test.js --env=jsdom",
     "build": "node scripts/build.js",
@@ -42,6 +43,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react-app": "^2.2.0",
     "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "^1.1.4",
@@ -51,6 +53,7 @@
     "css-loader": "^0.27.3",
     "detect-port": "^1.0.7",
     "dotenv": "^4.0.0",
+    "empty": "^0.10.1",
     "eslint": "^3.17.1",
     "eslint-config-prettier": "^1.5.0",
     "eslint-config-standard": "^7.0.1",
@@ -68,6 +71,7 @@
     "file-loader": "^0.10.1",
     "filesize": "^3.5.6",
     "flow-bin": "^0.42.0",
+    "flow-typed": "^2.0.0",
     "fs-extra": "^2.0.0",
     "gh-pages": "^0.12.0",
     "gzip-size": "^3.0.0",
@@ -115,6 +119,7 @@
   "babel": {
     "presets": [
       "react-app",
+      "flow",
       [
         "es2015",
         {
